--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body
 
 <ol>
 <li><a href="HW0/index.html">Pass</a></li>
-<li><a>Digital Assignment 2: Pass</a></li>
+<li><a href="HW0/index.html">Pass</a></li>
 </ol>
 
 
