--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body
 <li><a href="HW0/index.html">Pass</a></li>
 <li><a>Digital Assignment 2: pass</a></li>
 <li><a href="https://bakr98.github.io/cs325-game-prototypes/HW2/index.html">Digital Assignment 3</a></li>
+<li><a href="HW0/index.html">Pass</a></li>
 </ol>
 
 
