--- a/HW3/index.html
+++ b/HW3/index.html
@@ -42,7 +42,7 @@ Easiest thing was the movment while the hardest was getting the eggs to reset ev
 Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
 <ul>
 <li>Chicken sound: <a href="http://www.orangefreesounds.com/cockadoodledoo-sound/">Cockadoodledoo</a></li>
-<li>Farm background: <a href="https://www.google.com/search?q=farm+background+png&sxsrf=ALeKk03EaW-oiEz14iFdcCYC4aOnEgPD_Q:1583393941236&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiUrKCL6oLoAhVZmXIEHT_RBEsQ_AUoAXoECAwQAw&biw=1536&bih=706#imgrc=XdPbIP_0pv3e-M">Phaser logo</a></li>
+<li>Farm background: <a href="https://www.google.com/search?q=farm+background+png&sxsrf=ALeKk03EaW-oiEz14iFdcCYC4aOnEgPD_Q:1583393941236&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiUrKCL6oLoAhVZmXIEHT_RBEsQ_AUoAXoECAwQAw&biw=1536&bih=706#imgrc=XdPbIP_0pv3e-M">Farm</a></li>
 <li>Egg sprite: <a href="https://opengameart.org/content/egg-item-sprite">Egg</a></li>
 <li>Chicken sprite: <a href="https://opengameart.org/content/lpc-chicken-rework">Chicken</a></li>
 </ul>
