--- a/HW4/index.html
+++ b/HW4/index.html
@@ -22,15 +22,15 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Don't leave without your eggs</h2>
+<h2>Peas was never an option</h2>
 
 <ul>
 <li><strong>Originality:</strong>
-As far as I know, besides the collecting part, not a whole like this game exepct maybe sorta like snake.
+You fight off birds from your crops in waves, not sure about another game that does those two things in one
 </li>
 
 <li><strong>Technical Merit:</strong>
-The fact tat you get faster and you lose when you go out of bounds.
+Any game that has waves of fighting off enemies.
 </li>
 
 <li><strong>Prototype Postmortem:</strong>
@@ -39,28 +39,23 @@ Easiest thing was the movment while the hardest was getting the eggs to reset ev
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+Fight off birds trying to get your crops as you build defenses. 
 <ul>
-<li>Chicken sound: <a href="http://www.orangefreesounds.com/cockadoodledoo-sound/">Cockadoodledoo</a></li>
+<li>Farmer: <a href="https://opengameart.org/content/top-down-smart-old-man">farmer</a></li>
 <li>Farm background: <a href="https://www.google.com/search?q=farm+background+png&sxsrf=ALeKk03EaW-oiEz14iFdcCYC4aOnEgPD_Q:1583393941236&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiUrKCL6oLoAhVZmXIEHT_RBEsQ_AUoAXoECAwQAw&biw=1536&bih=706#imgrc=XdPbIP_0pv3e-M">Farm</a></li>
-<li>Egg sprite: <a href="https://opengameart.org/content/egg-item-sprite">Egg</a></li>
-<li>Chicken sprite: <a href="https://opengameart.org/content/lpc-chicken-rework">Chicken</a></li>
-</ul>
+
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Using these three examples plus the given game template.
-1)https://phaser.io/examples/v2/p2-physics/kill-and-revive
-2)https://phaser.io/examples/v2/sprites/out-of-bounds
-3)https://phaser.io/examples/v2/input/keyboard
+Using privioues game.
 </li>
 
 <li><strong>High Concept:</strong>
-Go around gathering eggs without leaving the screen while also getting faster as you go.
+Fight off birds trying to get your crops as you build defenses. 
 </li>
 
 <li><strong>Theme:</strong>
-Chicken.
+Farmer proctecing his crops.
 </li>
 
 <li><strong>Mandated Variety:</strong>
@@ -68,39 +63,31 @@ Keyboard, plenty as the egg spots are random, adventrue, and collector/achiever
 </li>
 
 <li><strong>Prototype Goal:</strong>
-1) How fast you can go and 2) testing the effectiveness of going out of bounds.
-What game mechanic is this prototype evaluating?
+Waves of enemies and tile mapping for the different defenses.
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-The feeling of getting faster and faster until they can't take the speed anymore.
+Want them to try to get the highest of number of waves cleared as the waves continue to grow and they lose more crops..
 </li>
 
 <li><strong>Gameplay:</strong>
-The actions the player can preform are to use the arrow keys to move the chicken around. However, when you press an arrow you keep moving in that direction until
-you press another arrow. You're trying to gather the eggs to get points but each egg you pick up makes you go faster. If you go off the edge, the game ends.
-
+The player can use the arrow keys to move around the map and spacebar to shoot their gun at any birds. Each wave will have more birds come to get the crops which are at the center of the screen. In between rounds you will have options to build defenses and upgrades to help fend off these birds. Depending on how many crops you still have left in between each round will determine how many defenses and/or upgrades you get.
 </li>
 
 <li><strong>Strategies:</strong>
-Not really strategies as it focuses more of relaxes although one strategy is to stay close to the center as to 
-not speed out.
+None right now.
 </li>
 
 <li><strong>Story/Setting/Premise:</strong>
-You're a chicken who's decied to leave his nest. Before you leave you ealize that you left a bunch of your eggs lying around.
-You think it's best if you gather them up before you leave. You keep getting more excited though with every egg you pick up.
-You can't help but feel with how fast you're going you'll leave the nest before you gather them all.
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, mention it here. If the game is abstract, then say so.
-How will the dramatic tension interact with the gameplay tension?
+You’re a farmer on their last legs. Each season has been tough for you but with these special crops that you found at the store you should be able to make a profit each day. However, these crops also attract flocks upon flocks of birds to eat them. You’ll be out in the field each day making sure to keep your crops safe as the crops determine if you have food on the plate each morning.
 </li>
 
 <li><strong>Target Audience:</strong>
-Anyone who knows how to push the arrow keys.
+People who like to strategize and people who like games about reflexes.
 </li>
 
 <li><strong>Play Time:</strong>
-About thirty seconds to a minute.
+N/A
 </li>
 
 </ul>
