--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body
 <li><a href="https://bakr98.github.io/cs325-game-prototypes/HW2/index.html">Digital Assignment 3</a></li>
 <li><a href="HW3/index.html">Digital Assignment 4!</a></li>
 <li><a href="HW4/index.html">Digital Assignment 5!</a></li>
+<li><a href="HW4/index.html">Digital Assignment 6</a></li>
 </ol>
 
 
