--- a/HW4/index.html
+++ b/HW4/index.html
@@ -41,8 +41,8 @@ Easiest thing was the movment while the hardest was getting the eggs to reset ev
 <li><strong>Prototype Assets:</strong>
 Fight off birds trying to get your crops as you build defenses. 
 <ul>
-<li>Farmer: <a href="https://opengameart.org/content/top-down-smart-old-man">farmer</a></li>
-<li>Farm background: <a href="https://www.google.com/search?q=farm+background+png&sxsrf=ALeKk03EaW-oiEz14iFdcCYC4aOnEgPD_Q:1583393941236&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiUrKCL6oLoAhVZmXIEHT_RBEsQ_AUoAXoECAwQAw&biw=1536&bih=706#imgrc=XdPbIP_0pv3e-M">Farm</a></li>
+<li>Farmer: <a href="https://opengameart.org/content/top-down-smart-old-man" crossorigin="anonymous">farmer</a></li>
+<li>Farm background: <a href="https://www.google.com/search?q=farm+background+png&sxsrf=ALeKk03EaW-oiEz14iFdcCYC4aOnEgPD_Q:1583393941236&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiUrKCL6oLoAhVZmXIEHT_RBEsQ_AUoAXoECAwQAw&biw=1536&bih=706#imgrc=XdPbIP_0pv3e-M" crossorigin="anonymous">Farm</a></li>
 
 </li>
 
