--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ body
 
 <ol>
 <li><a href="HW0/index.html" crossorigin="anonymous">Pass</a></li>
-<li><a>Digital Assignment 2: pass</a></li>
+<li><a crossorigin="anonymous">Digital Assignment 2: pass</a></li>
 <li><a href="https://bakr98.github.io/cs325-game-prototypes/HW2/index.html">Digital Assignment 3</a></li>
 <li><a href="HW3/index.html" crossorigin="anonymous">Digital Assignment 4!</a></li>
-<li><a href="HW4/index.html">Digital Assignment 5!</a></li>
-<li><a href="HW4/index.html">Digital Assignment 6</a></li>
+<li><a href="HW4/index.html" crossorigin="anonymous">Digital Assignment 5!</a></li>
+<li><a href="HW4/index.html" crossorigin="anonymous">Digital Assignment 6</a></li>
 </ol>
 
 
