--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ body
 <li><a href="HW3/index.html" crossorigin="anonymous">Digital Assignment 4!</a></li>
 <li><a href="HW4/index.html" crossorigin="anonymous">Digital Assignment 5!</a></li>
 <li><a href="HW4/index.html" crossorigin="anonymous">Digital Assignment 6</a></li>
+<li><a href="HW4/index.html" crossorigin="anonymous">Digital Assignment 7</a></li>
 </ol>
 
 
